// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Autocomplete
    classes={
      Object {
        "autoComplete": "autoComplete",
        "droplist": "droplist",
        "labels": "labels",
      }
    }
    droplistProps={
      Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      }
    }
    inputProps={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <StyledInput
          className="undefined"
          clear={undefined}
          disabled={undefined}
          iconName={undefined}
          id={undefined}
          label={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClear={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onRef={[Function]}
          placeholder={undefined}
          selectOnFocus={undefined}
          theme={undefined}
          type={undefined}
          valueProp=""
        />,
        null,
        "",
      ],
      "className": "autoComplete",
      "id": undefined,
      "style": undefined,
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "undefined",
          "clear": undefined,
          "disabled": undefined,
          "iconName": undefined,
          "id": undefined,
          "label": undefined,
          "name": undefined,
          "onBlur": [Function],
          "onChange": [Function],
          "onClear": [Function],
          "onFocus": [Function],
          "onKeyUp": [Function],
          "onRef": [Function],
          "placeholder": undefined,
          "selectOnFocus": undefined,
          "theme": undefined,
          "type": undefined,
          "valueProp": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      "",
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <StyledInput
            className="undefined"
            clear={undefined}
            disabled={undefined}
            iconName={undefined}
            id={undefined}
            label={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClear={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            onRef={[Function]}
            placeholder={undefined}
            selectOnFocus={undefined}
            theme={undefined}
            type={undefined}
            valueProp=""
          />,
          null,
          "",
        ],
        "className": "autoComplete",
        "id": undefined,
        "style": undefined,
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "undefined",
            "clear": undefined,
            "disabled": undefined,
            "iconName": undefined,
            "id": undefined,
            "label": undefined,
            "name": undefined,
            "onBlur": [Function],
            "onChange": [Function],
            "onClear": [Function],
            "onFocus": [Function],
            "onKeyUp": [Function],
            "onRef": [Function],
            "placeholder": undefined,
            "selectOnFocus": undefined,
            "theme": undefined,
            "type": undefined,
            "valueProp": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        "",
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Autocomplete styles matches the snapshot 1`] = `
Object {
  "autoComplete": Object {
    "position": "relative",
  },
  "droplist": Object {
    "left": "0",
    "position": "absolute",
    "top": [Function],
    "width": "100%",
    "zIndex": "2",
  },
  "labels": Object {
    "marginTop": "-18px",
    "width": "100%",
  },
}
`;

exports[`AutocompleteJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Autocomplete)
    droplistProps={
      Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      }
    }
    inputProps={Object {}}
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "autoComplete": "Autocomplete-autoComplete-0-1-693 Autocomplete-autoComplete-0-1-689",
        "droplist": "Autocomplete-droplist-0-1-692 Autocomplete-droplist-0-1-690",
        "labels": "Autocomplete-labels-0-1-694 Autocomplete-labels-0-1-691",
      },
      "droplistProps": Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      },
      "inputProps": Object {},
      "items": Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "autoComplete": "Autocomplete-autoComplete-0-1-693 Autocomplete-autoComplete-0-1-689",
          "droplist": "Autocomplete-droplist-0-1-692 Autocomplete-droplist-0-1-690",
          "labels": "Autocomplete-labels-0-1-694 Autocomplete-labels-0-1-691",
        },
        "droplistProps": Object {
          "items": Array [
            Object {
              "id": 1,
              "text": "Administrador",
              "textRight": "(222)",
            },
            Object {
              "id": 2,
              "text": "Administrador Sr",
              "textRight": "(134)",
            },
            Object {
              "id": 3,
              "text": "Administrador Jr",
              "textRight": "(52)",
            },
            Object {
              "id": 4,
              "text": "Administrar",
              "textRight": "(6)",
            },
          ],
        },
        "inputProps": Object {},
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
